--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(Project5)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Hashing main.cpp)
+add_executable(Hashing main.cpp
+        SeparateChaining.h
+        subscribe.h
+        Stack.h
+        OpenAddressing.h)
